--- a/css/styless.css
+++ b/css/styless.css
@@ -52,3 +52,87 @@ a {
 .contacts {
     font-style: normal;
 }
+
+.main-header {
+    font-weight: 700;
+        font-size: 56px;
+        line-height: 1.1;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #fff;
+}
+
+.hero {
+    background-color: #2e2f42;
+}
+
+.hero-button {
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: #4d5ae5;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
+
+}
+
+.hero-button:hover,
+.hero-button:focus {
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: #404bbf;
+}
+
+.third-header {
+    font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+}
+
+.descr {
+    font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
+}
+
+.hero-third {
+    background: #f4f4fd;
+}
+
+.second-header {
+font-weight: 700;
+    font-size: 36px;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+}
+
+.team-item {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    background: #fff;
+}
+
+.hero-third .third-header {
+    text-align: center;
+}
+
+.hero-third .descr {
+    text-align: center;
+}
+
+.logo-footer .logo-part {
+    color: #f4f4fd;
+}
+
+.footer-hero {
+    background-color: #2e2f42;
+}
+
+.footer-hero .descr {
+    color: #f4f4fd;
+}
